get articles list
